--- a/libexec/mport.create/Makefile
+++ b/libexec/mport.create/Makefile
@@ -1,13 +1,10 @@
-# $MidnightBSD$
-
 PROG= mport.create
 
 CFLAGS+=	-fblocks -I${.CURDIR}/../../lib/libmport/
 WARNS?= 	6
 
-NO_MAN=		yes
+MK_MAN= no
 
-LDADD= 	-lmport -ldispatch -lBlocksRuntime
-DPADD= 	${LIBMPORT} ${LIBDISPATCH} ${LIBBLOCKSRUNTIME}
+LIBADD= mport dispatch BlocksRuntime pthread
 
 .include <bsd.prog.mk>
