--- a/libexec/mport.fetch/Makefile
+++ b/libexec/mport.fetch/Makefile
@@ -3,9 +3,8 @@ PROG= mport.fetch
 CFLAGS=	-I${.CURDIR}/../../lib/libmport/ -fblocks
 WARNS?= 	4
 
-NO_MAN=		yes
+MK_MAN= no
 
-LDADD= 	-lmport -ldispatch -lBlocksRuntime
-DPADD= 	${LIBMPORT} ${LIBDISPATCH} ${LIBBLOCKSRUNTIME}
+LIBADD= mport dispatch BlocksRuntime pthread
 
 .include <bsd.prog.mk>
