--- a/libexec/mport.init/Makefile
+++ b/libexec/mport.init/Makefile
@@ -1,13 +1,11 @@
-# $MidnightBSD$
-
 PROG= mport.init
 
 CFLAGS+=	-I${.CURDIR}/../../lib/libmport/ -fblocks
 WARNS?= 	4
 
-NO_MAN=		yes
+MK_MAN=		no
 
-LDADD= 	-lmport -ldispatch -lBlocksRuntime
-DPADD= 	${LIBMPORT} ${LIBDISPATCH} ${LIBBLOCKSRUNTIME}
+LIBADD+=	mport dispatch BlocksRuntime pthread
+
 
 .include <bsd.prog.mk>
