fix some libexec

--- a/libexec/telnetd/Makefile
+++ b/libexec/telnetd/Makefile
@@ -1,10 +1,9 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/libexec/telnetd/Makefile 321267 2017-07-20 00:52:11Z ngie $
+# $FreeBSD: stable/11/libexec/telnetd/Makefile 321269 2017-07-20 00:58:19Z ngie $
 
 # Do not define -DKLUDGELINEMODE, as it does not interact well with many
 # telnet implementations.
 
-.include <bsd.own.mk>
+.include <src.opts.mk>
 
 TELNETDIR=	${SRCTOP}/contrib/telnet
 .PATH:		${TELNETDIR}/telnetd
@@ -30,23 +29,17 @@ CFLAGS+=	-I${TELNETDIR}/telnet
 
 LIBTELNET=	${OBJTOP}/lib/libtelnet/libtelnet.a
 
-DPADD=		${LIBUTIL} ${LIBTERMCAP} ${LIBTELNET}
-LDADD=		-lutil -ltermcap ${LIBTELNET}
+LIBADD=		telnet util ncursesw
 
-# XXX for src/release/picobsd
-.if !defined(RELEASE_CRUNCH)
 .if ${MK_OPENSSL} != "no"
 SRCS+=		authenc.c
 CFLAGS+=	-DAUTHENTICATION -DENCRYPTION
-DPADD+=		${LIBMP} ${LIBCRYPTO} ${LIBCRYPT} ${LIBPAM}
-LDADD+=		-lmp -lcrypto -lcrypt ${MINUSLPAM}
+LIBADD+=	mp crypto pam
 .endif
 
 .if ${MK_KERBEROS_SUPPORT} != "no"
 CFLAGS+=	-DKRB5 -DFORWARD -Dnet_write=telnet_net_write
-DPADD+=		${LIBKRB5} ${LIBHX509} ${LIBASN1} ${LIBROKEN} ${LIBCOM_ERR}
-LDADD+=		-lkrb5 -lhx509 -lasn1 -lroken -lcom_err
-.endif
+LIBADD+=	krb5 roken
 .endif
 
 .include <bsd.prog.mk>
