--- a/libexec/rpc.rusersd/Makefile
+++ b/libexec/rpc.rusersd/Makefile
@@ -1,12 +1,10 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/libexec/rpc.rusersd/Makefile 241777 2012-10-20 10:33:15Z ed $
+# $FreeBSD: stable/11/libexec/rpc.rusersd/Makefile 275077 2014-11-25 21:18:18Z bapt $
 
 PROG =	rpc.rusersd
 SRCS =	rusersd.c rusers_proc.c extern.h
 MAN =	rpc.rusersd.8
 
-DPADD=	${LIBRPCSVC} ${LIBUTIL}
-LDADD=	-lrpcsvc -lutil
+LIBADD=	rpcsvc
 
 #.if exists(/usr/X11R6/include/X11/extensions/xidle.h)
 #CFLAGS+= -DXIDLE
