--- a/libexec/rpc.sprayd/Makefile
+++ b/libexec/rpc.sprayd/Makefile
@@ -1,13 +1,9 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/libexec/rpc.sprayd/Makefile 201380 2010-01-02 09:50:19Z ed $
+# $FreeBSD: stable/11/libexec/rpc.sprayd/Makefile 332605 2018-04-16 16:27:08Z asomers $
 
 PROG =	rpc.sprayd
 SRCS =	sprayd.c
 MAN =	rpc.sprayd.8
 
-DPADD=	${LIBRPCSVC}
-LDADD=	-lrpcsvc
-
-WARNS?=	2
+LIBADD=	rpcsvc
 
 .include <bsd.prog.mk>
