--- a/libexec/rtld-elf/i386/Makefile.inc
+++ b/libexec/rtld-elf/i386/Makefile.inc
@@ -1,4 +1,4 @@
-# $MidnightBSD$
+# $FreeBSD: stable/11/libexec/rtld-elf/i386/Makefile.inc 286317 2015-08-05 12:53:55Z vangyzen $
 
 CFLAGS+=	${CFLAGS_NO_SIMD} -msoft-float
 # Uncomment this to build the dynamic linker as an executable instead
