--- a/libexec/fingerd/Makefile
+++ b/libexec/fingerd/Makefile
@@ -1,13 +1,16 @@
-# $MidnightBSD$
-#	@(#)Makefile	8.1 (Berkeley) 6/4/93
-# $FreeBSD: stable/10/libexec/fingerd/Makefile 201380 2010-01-02 09:50:19Z ed $
+.include <src.opts.mk>
 
 PROG=	fingerd
-DPADD=	${LIBUTIL}
-LDADD=	-lutil
+LIBADD=	util
 MAN=	fingerd.8
 
 WARNS?=	2
 WFORMAT=0
+
+.if ${MK_BLACKLIST_SUPPORT} != "no"
+CFLAGS+= -DUSE_BLACKLIST -I${SRCTOP}/contrib/blacklist/include
+LIBADD+= blacklist
+LDFLAGS+=-L${LIBBLACKLISTDIR}
+.endif
 
 .include <bsd.prog.mk>
