update some more libexec app

--- a/libexec/bootpd/Makefile.inc
+++ b/libexec/bootpd/Makefile.inc
@@ -1,6 +1,5 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/libexec/bootpd/Makefile.inc 201380 2010-01-02 09:50:19Z ed $
-
-BINDIR?=	/usr/libexec
+# $FreeBSD: stable/11/libexec/bootpd/Makefile.inc 350470 2019-07-31 17:29:14Z brooks $
 
 WARNS?=		1
+
+.include "../Makefile.inc"
