--- a/libexec/bootpd/tools/Makefile.inc
+++ b/libexec/bootpd/tools/Makefile.inc
@@ -1,7 +1,8 @@
-# $MidnightBSD$
 # Makefile.inc
-# $FreeBSD: stable/10/libexec/bootpd/tools/Makefile.inc 201380 2010-01-02 09:50:19Z ed $
+# $FreeBSD: stable/11/libexec/bootpd/tools/Makefile.inc 350470 2019-07-31 17:29:14Z brooks $
 
 BINDIR=		/usr/sbin
 
 WARNS?=		1
+
+.include "../Makefile.inc"
