--- a/libexec/makewhatis.local/Makefile
+++ b/libexec/makewhatis.local/Makefile
@@ -1,8 +1,9 @@
-# $MidnightBSD$
-# $FreeBSD: head/libexec/makewhatis.local/Makefile 323550 2017-09-13 16:35:16Z gordon $
+# $FreeBSD: stable/11/libexec/makewhatis.local/Makefile 295733 2016-02-18 00:26:21Z bdrewery $
 
 SCRIPTS=	makewhatis.local.sh
 MAN=		makewhatis.local.8
 SCRIPTSDIR=	${LIBEXECDIR}
+LINKS=		${SCRIPTSDIR}/makewhatis.local ${SCRIPTSDIR}/catman.local
+MLINKS=		makewhatis.local.8 catman.local.8
 
 .include <bsd.prog.mk>
