--- a/rescue/Makefile
+++ b/rescue/Makefile
@@ -1,5 +1,4 @@
-# $FreeBSD: src/rescue/Makefile,v 1.1 2003/06/29 18:35:36 gordon Exp $
-# $MidnightBSD$ 
+# $FreeBSD: stable/11/rescue/Makefile 117035 2003-06-29 18:35:37Z gordon $
 
 SUBDIR=	librescue \
 	rescue
