--- a/sbin/Makefile.amd64
+++ b/sbin/Makefile.amd64
@@ -1,4 +1,4 @@
-# $MidnightBSD$
+# $FreeBSD: stable/11/sbin/Makefile.amd64 240621 2012-09-17 21:41:38Z jimharris $
 
 SUBDIR += bsdlabel
 SUBDIR += fdisk
