--- a/sbin/quotacheck/Makefile
+++ b/sbin/quotacheck/Makefile
@@ -1,14 +1,13 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/sbin/quotacheck/Makefile 207736 2010-05-07 00:41:12Z mckusick $
+# $FreeBSD: stable/11/sbin/quotacheck/Makefile 319185 2017-05-30 04:17:22Z ngie $
 #	@(#)Makefile	8.1 (Berkeley) 6/5/93
 
+PACKAGE=quotacheck
 PROG=	quotacheck
 SRCS=	quotacheck.c preen.c fsutil.c utilities.c
 WARNS?=	2
 MAN=	quotacheck.8
-DPADD=  ${LIBUTIL}
-LDADD=  -lutil
+LIBADD=	util
 
-.PATH:	${.CURDIR}/../fsck ${.CURDIR}/../fsck_ffs
+.PATH:	${.CURDIR:H}/fsck ${.CURDIR:H}/fsck_ffs
 
 .include <bsd.prog.mk>
