--- a/sbin/restore/Makefile
+++ b/sbin/restore/Makefile
@@ -1,9 +1,9 @@
-# $MidnightBSD$
 #	@(#)Makefile	8.1 (Berkeley) 6/5/93
-# $FreeBSD: stable/10/sbin/restore/Makefile 203155 2010-01-29 10:00:42Z jh $
+# $FreeBSD: stable/11/sbin/restore/Makefile 319185 2017-05-30 04:17:22Z ngie $
 
-.PATH: ${.CURDIR}/../dump
+.PATH: ${.CURDIR:H}/dump
 
+PACKAGE=runtime
 PROG=	restore
 LINKS=	${BINDIR}/restore ${BINDIR}/rrestore
 MAN=	restore.8
