--- a/sbin/route/Makefile
+++ b/sbin/route/Makefile
@@ -1,9 +1,9 @@
-# $MidnightBSD$
 #	@(#)Makefile	8.1 (Berkeley) 6/5/93
-# $FreeBSD: stable/10/sbin/route/Makefile 253427 2013-07-17 14:05:20Z hrs $
+# $FreeBSD: stable/11/sbin/route/Makefile 298107 2016-04-16 07:45:30Z gjb $
 
-.include <bsd.own.mk>
+.include <src.opts.mk>
 
+PACKAGE=runtime
 PROG=	route
 MAN=	route.8
 SRCS=	route.c keywords.h
