--- a/sbin/routed/rtquery/Makefile
+++ b/sbin/routed/rtquery/Makefile
@@ -1,11 +1,11 @@
 # Make `routed` tools for BSD/OS
-# $Revision: 1.2 $
-# $MidnightBSD$
+# $Revision: 1.6 $
+# $FreeBSD: stable/11/sbin/routed/rtquery/Makefile 298107 2016-04-16 07:45:30Z gjb $
 
+PACKAGE=runtime
 PROG=	rtquery
 MAN=	rtquery.8
-LDADD=	-lmd
-DPADD=	${LIBMD}
+LIBADD=	md
 WARNS?=	3
 NO_WARRAY_BOUNDS=
 
