--- a/sbin/Makefile.i386
+++ b/sbin/Makefile.i386
@@ -1,4 +1,4 @@
-# $MidnightBSD$
+# $FreeBSD: stable/11/sbin/Makefile.i386 240621 2012-09-17 21:41:38Z jimharris $
 
 SUBDIR += bsdlabel
 SUBDIR += fdisk
