--- a/sbin/Makefile.inc
+++ b/sbin/Makefile.inc
@@ -1,8 +1,7 @@
 #	@(#)Makefile.inc	8.1 (Berkeley) 6/8/93
-# $FreeBSD: src/sbin/Makefile.inc,v 1.15 2006/03/17 18:54:30 ru Exp $
-# $MidnightBSD: src/sbin/Makefile.inc,v 1.3 2008/11/11 21:29:36 laffer1 Exp $
+# $FreeBSD: stable/11/sbin/Makefile.inc 265420 2014-05-06 04:22:01Z imp $
 
-.include <bsd.own.mk>
+.include <src.opts.mk>
 
 BINDIR?=	/sbin
 WARNS?=	6
