--- a/sbin/growfs/Makefile
+++ b/sbin/growfs/Makefile
@@ -1,30 +1,29 @@
-# $MidnightBSD$
 #	@(#)Makefile	8.8 (Berkeley) 6/21/2000
 #
 # $TSHeader: src/sbin/growfs/Makefile,v 1.4 2000/12/05 19:45:24 tomsoft Exp $
-# $FreeBSD: stable/10/sbin/growfs/Makefile 284669 2015-06-21 06:49:44Z trasz $
+# $FreeBSD: stable/11/sbin/growfs/Makefile 319185 2017-05-30 04:17:22Z ngie $
 #
 
-.include <bsd.own.mk>
+.include <src.opts.mk>
 
-.PATH:	${.CURDIR}/../mount
+.PATH:	${.CURDIR:H}/mount
 
+PACKAGE=runtime
 PROG=   growfs
 SRCS=   growfs.c getmntopts.c
 MAN=	growfs.8
-CFLAGS+=-I${.CURDIR}/../mount
+CFLAGS+=-I${.CURDIR:H}/mount
 
 .if defined(GFSDBG)
 SRCS+=	debug.c
 CFLAGS+= -DFS_DEBUG
 NO_WCAST_ALIGN= yes
-.endif  
+.endif
 
-DPADD=	${LIBUTIL}
-LDADD=	-lutil
+LIBADD=	util
 
 .if ${MK_TESTS} != "no"
 SUBDIR+=    tests
 .endif
 
-.include <bsd.prog.mk>      
+.include <bsd.prog.mk>
