--- a/sbin/nvmecontrol/Makefile
+++ b/sbin/nvmecontrol/Makefile
@@ -1,11 +1,11 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/sbin/nvmecontrol/Makefile 253476 2013-07-19 21:40:57Z jimharris $
+# $FreeBSD: stable/11/sbin/nvmecontrol/Makefile 328728 2018-02-01 19:46:41Z mav $
 
+PACKAGE=runtime
 PROG=	nvmecontrol
 SRCS=	nvmecontrol.c devlist.c firmware.c identify.c logpage.c	\
-	perftest.c reset.c nvme_util.c
+	perftest.c reset.c nvme_util.c power.c util.c wdc.c
 MAN=	nvmecontrol.8
 
-.PATH:	${.CURDIR}/../../sys/dev/nvme
+.PATH:	${SRCTOP}/sys/dev/nvme
 
 .include <bsd.prog.mk>
