--- a/sbin/dump/Makefile
+++ b/sbin/dump/Makefile
@@ -1,6 +1,5 @@
-# $MidnightBSD$
 #	@(#)Makefile	8.1 (Berkeley) 6/5/93
-# $FreeBSD: stable/10/sbin/dump/Makefile 198236 2009-10-19 16:00:24Z ru $
+# $FreeBSD: stable/11/sbin/dump/Makefile 298107 2016-04-16 07:45:30Z gjb $
 
 #	dump.h			header file
 #	itime.c			reads /etc/dumpdates
@@ -14,6 +13,7 @@
 #	DEBUG			use local directory to find ddate and dumpdates
 #	TDEBUG			trace out the process forking
 
+PACKAGE=runtime
 PROG=	dump
 LINKS=	${BINDIR}/dump ${BINDIR}/rdump
 CFLAGS+=-DRDUMP
