--- a/sbin/clri/Makefile
+++ b/sbin/clri/Makefile
@@ -1,6 +1,7 @@
 #	@(#)Makefile	8.1 (Berkeley) 6/5/93
-# $MidnightBSD$
+# $FreeBSD: stable/11/sbin/clri/Makefile 298107 2016-04-16 07:45:30Z gjb $
 
+PACKAGE=runtime
 PROG=	clri
 MAN=	clri.8
 WARNS?=	2
