--- a/sbin/comcontrol/Makefile
+++ b/sbin/comcontrol/Makefile
@@ -1,6 +1,7 @@
 #	@(#)Makefile	5.4 (Berkeley) 6/5/91
-# $MidnightBSD$
+# $FreeBSD: stable/11/sbin/comcontrol/Makefile 298107 2016-04-16 07:45:30Z gjb $
 
+PACKAGE=runtime
 PROG=	comcontrol
 MAN=	comcontrol.8
 
