--- a/sbin/fsirand/Makefile
+++ b/sbin/fsirand/Makefile
@@ -1,11 +1,9 @@
-# $MidnightBSD$
 #	$OpenBSD: Makefile,v 1.1 1997/01/26 02:23:20 millert Exp $
-# $FreeBSD: stable/10/sbin/fsirand/Makefile 208074 2010-05-14 14:26:49Z uqs $
+# $FreeBSD: stable/11/sbin/fsirand/Makefile 298107 2016-04-16 07:45:30Z gjb $
 
+PACKAGE=runtime
 PROG=	fsirand
 MAN=	fsirand.8
 WARNS?=	3
-DPADD=	${LIBUTIL}
-LDADD=	-lutil
 
 .include <bsd.prog.mk>
