--- a/sbin/geom/class/Makefile
+++ b/sbin/geom/class/Makefile
@@ -1,7 +1,6 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/sbin/geom/class/Makefile 219974 2011-03-24 21:31:32Z mav $
+# $FreeBSD: stable/11/sbin/geom/class/Makefile 265420 2014-05-06 04:22:01Z imp $
 
-.include <bsd.own.mk>
+.include <src.opts.mk>
 
 SUBDIR=	cache
 SUBDIR+=concat
