--- a/sbin/geom/class/eli/Makefile
+++ b/sbin/geom/class/eli/Makefile
@@ -1,20 +1,20 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/sbin/geom/class/eli/Makefile 314327 2017-02-27 08:27:38Z avg $
+# $FreeBSD: stable/11/sbin/geom/class/eli/Makefile 319185 2017-05-30 04:17:22Z ngie $
 
-.PATH: ${.CURDIR}/../../misc ${.CURDIR}/../../../../sys/geom/eli ${.CURDIR}/../../../../sys/crypto/sha2
+PACKAGE=runtime
+.PATH: ${.CURDIR:H:H}/misc ${SRCTOP}/sys/geom/eli ${SRCTOP}/sys/crypto/sha2
 
 GEOM_CLASS=	eli
 SRCS=	g_eli_crypto.c
+SRCS+=	g_eli_hmac.c
 SRCS+=	g_eli_key.c
 SRCS+=	pkcs5v2.c
 SRCS+=	sha256c.c
 SRCS+=	sha512c.c
 
-DPADD=	${LIBMD} ${LIBCRYPTO}
-LDADD=	-lmd -lcrypto
+LIBADD=	md crypto
 
 WARNS?=	3
 
-CFLAGS+=-I${.CURDIR}/../../../../sys
+CFLAGS+=-I${SRCTOP}/sys
 
 .include <bsd.lib.mk>
