--- a/sbin/geom/class/raid3/Makefile
+++ b/sbin/geom/class/raid3/Makefile
@@ -1,11 +1,10 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/sbin/geom/class/raid3/Makefile 216468 2010-12-15 23:24:34Z obrien $
+# $FreeBSD: stable/11/sbin/geom/class/raid3/Makefile 319185 2017-05-30 04:17:22Z ngie $
 
-.PATH:	${.CURDIR}/../../misc
+PACKAGE=runtime
+.PATH: ${.CURDIR:H:H}/misc
 
 GEOM_CLASS=	raid3
 
-DPADD=	${LIBMD}
-LDADD=	-lmd
+LIBADD=	md
 
 .include <bsd.lib.mk>
