--- a/sbin/geom/core/Makefile
+++ b/sbin/geom/core/Makefile
@@ -1,8 +1,8 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/sbin/geom/core/Makefile 216470 2010-12-15 23:45:12Z obrien $
+# $FreeBSD: stable/11/sbin/geom/core/Makefile 319185 2017-05-30 04:17:22Z ngie $
 
-.PATH: ${.CURDIR}/../misc
+.PATH: ${.CURDIR:H}/misc
 
+PACKAGE=runtime
 PROG=	geom
 MAN=	geom.8
 SRCS=	geom.c subr.c
@@ -10,9 +10,8 @@ SRCS=	geom.c subr.c
 NO_SHARED=NO
 
 CFLAGS+= -DGEOM_CLASS_DIR=\"${GEOM_CLASS_DIR}\"
-CFLAGS+= -I${.CURDIR}/../../../sys -I${.CURDIR} -I${.CURDIR}/..
+CFLAGS+= -I${SRCTOP}/sys -I${.CURDIR} -I${.CURDIR:H}
 
-DPADD=	${LIBGEOM} ${LIBSBUF} ${LIBBSDXML} ${LIBUTIL}
-LDADD=	-lgeom -lsbuf -lbsdxml -lutil
+LIBADD=	geom util
 
 .include <bsd.prog.mk>
