--- a/sbin/geom/class/part/Makefile
+++ b/sbin/geom/class/part/Makefile
@@ -1,11 +1,10 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/sbin/geom/class/part/Makefile 216468 2010-12-15 23:24:34Z obrien $
+# $FreeBSD: stable/11/sbin/geom/class/part/Makefile 319185 2017-05-30 04:17:22Z ngie $
 
-.PATH: ${.CURDIR}/../../misc
+PACKAGE=runtime
+.PATH: ${.CURDIR:H:H}/misc
 
 GEOM_CLASS=	part
 
-DPADD=	${LIBUTIL}
-LDADD=	-lutil
+LIBADD=	util
 
 .include <bsd.lib.mk>
