--- a/sbin/mount_udf/Makefile
+++ b/sbin/mount_udf/Makefile
@@ -1,14 +1,13 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/sbin/mount_udf/Makefile 247861 2013-03-06 00:36:33Z jkim $
+# $FreeBSD: stable/11/sbin/mount_udf/Makefile 319185 2017-05-30 04:17:22Z ngie $
 
+PACKAGE=runtime
 PROG=	mount_udf
 SRCS=	mount_udf.c getmntopts.c
 MAN=	mount_udf.8
-DPADD=	${LIBKICONV}
-LDADD=	-lkiconv
+LIBADD=	kiconv
 
-MOUNT=	${.CURDIR}/../mount
-CFLAGS+= -I${MOUNT} -I${.CURDIR}/../../sys
+MOUNT=	${.CURDIR:H}/mount
+CFLAGS+= -I${MOUNT} -I${SRCTOP}/sys
 .PATH:	${MOUNT}
 
 # Needs to be dynamically linked for optional dlopen() access to
