--- a/sbin/mount_fusefs/Makefile
+++ b/sbin/mount_fusefs/Makefile
@@ -1,5 +1,4 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/sbin/mount_fusefs/Makefile 241519 2012-10-13 23:54:26Z attilio $
+# $FreeBSD: stable/11/sbin/mount_fusefs/Makefile 319185 2017-05-30 04:17:22Z ngie $
 
 .if defined(DEBUG)
 DEBUG_FLAGS+= -D_DEBUG -g
@@ -21,12 +20,12 @@ DEBUG_FLAGS+= -D_DEBUG_MSG
 DEBUG_FLAGS+= -DFUSE4BSD_VERSION="\"${F4BVERS}\""
 .endif
 
+PACKAGE=runtime
 PROG=	mount_fusefs
 SRCS=	mount_fusefs.c getmntopts.c
 MAN8=	mount_fusefs.8
-NO_MANCOMPRESS?=	yes
 
-MOUNT=	${.CURDIR}/../mount
+MOUNT=	${.CURDIR:H}/mount
 CFLAGS+=	-I${MOUNT}
 
 .PATH: ${MOUNT}
