--- a/sbin/mount_nullfs/Makefile
+++ b/sbin/mount_nullfs/Makefile
@@ -1,12 +1,12 @@
-# $MidnightBSD$
 #	@(#)Makefile	8.3 (Berkeley) 3/27/94
-# $FreeBSD: stable/10/sbin/mount_nullfs/Makefile 198236 2009-10-19 16:00:24Z ru $
+# $FreeBSD: stable/11/sbin/mount_nullfs/Makefile 319185 2017-05-30 04:17:22Z ngie $
 
+PACKAGE=runtime
 PROG=	mount_nullfs
 SRCS=	mount_nullfs.c getmntopts.c
 MAN=	mount_nullfs.8
 
-MOUNT=	${.CURDIR}/../mount
+MOUNT=	${.CURDIR:H}/mount
 CFLAGS+=-I${MOUNT}
 
 .PATH:	${MOUNT}
