--- a/sbin/conscontrol/Makefile
+++ b/sbin/conscontrol/Makefile
@@ -1,5 +1,6 @@
-# $MidnightBSD$
+# $FreeBSD: stable/11/sbin/conscontrol/Makefile 298107 2016-04-16 07:45:30Z gjb $
 
+PACKAGE=runtime
 PROG=	conscontrol
 MAN=	conscontrol.8
 WARNS?=	2
