fixup builds. update ping and ping6

--- a/sbin/ping/Makefile
+++ b/sbin/ping/Makefile
@@ -1,19 +1,25 @@
-# $MidnightBSD$
 #	@(#)Makefile	8.1 (Berkeley) 6/5/93
-# $FreeBSD: stable/10/sbin/ping/Makefile 161526 2006-08-22 08:03:01Z ru $
+# $FreeBSD: stable/11/sbin/ping/Makefile 298107 2016-04-16 07:45:30Z gjb $
 
+.include <src.opts.mk>
+
+PACKAGE=runtime
 PROG=	ping
 MAN=	ping.8
 BINOWN=	root
 BINMODE=4555
-WARNS?=	2
-DPADD=	${LIBM}
-LDADD=	-lm
+WARNS?=	3
+LIBADD=	m
+
+.if ${MK_CASPER} != "no" && !defined(RESCUE)
+LIBADD+=	casper
+LIBADD+=	cap_dns
+CFLAGS+=-DHAVE_LIBCASPER
+.endif
 
 .if !defined(RELEASE_CRUNCH)
 CFLAGS+=-DIPSEC
-DPADD+=	${LIBIPSEC}
-LDADD+=	-lipsec
+LIBADD+=	ipsec
 .endif
 
 .include <bsd.prog.mk>
