--- a/sbin/ping6/Makefile
+++ b/sbin/ping6/Makefile
@@ -1,16 +1,15 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/sbin/ping6/Makefile 287328 2015-08-31 18:53:41Z delphij $
+# $FreeBSD: stable/11/sbin/ping6/Makefile 298107 2016-04-16 07:45:30Z gjb $
 
+PACKAGE=runtime
 PROG=	ping6
 MAN=	ping6.8
 
 CFLAGS+=-DIPSEC -DKAME_SCOPEID -DUSE_RFC2292BIS
-WARNS?=	2
+WARNS?=	3
 
 BINOWN=	root
 BINMODE=4555
 
-LDADD=	-lipsec -lm -lmd
-DPADD= ${LIBIPSEC} ${LIBM} ${LIBMD}
+LIBADD=	ipsec m md
 
 .include <bsd.prog.mk>
