--- a/usr.bin/mt/Makefile
+++ b/usr.bin/mt/Makefile
@@ -1,9 +1,7 @@
-# $MidnightBSD$
 #	@(#)Makefile	8.1 (Berkeley) 6/6/93
-# $FreeBSD: stable/10/usr.bin/mt/Makefile 280438 2015-03-24 14:36:10Z ken $
+# $FreeBSD: stable/11/usr.bin/mt/Makefile 281332 2015-04-09 21:26:38Z bapt $
 
 PROG=	mt
-DPADD=	${LIBMT} ${LIBSBUF} ${LIBBSDXML}
-LDADD=	-lmt -lsbuf -lbsdxml
+LIBADD=	mt
 
 .include <bsd.prog.mk>
