fix id(1) build.

--- a/usr.bin/id/Makefile
+++ b/usr.bin/id/Makefile
@@ -1,8 +1,7 @@
-# $MidnightBSD$
 #	@(#)Makefile	8.1 (Berkeley) 6/6/93
-# $FreeBSD: stable/10/usr.bin/id/Makefile 201386 2010-01-02 10:27:05Z ed $
+# $FreeBSD: stable/11/usr.bin/id/Makefile 274136 2014-11-05 15:03:58Z bapt $
 
-.include <bsd.own.mk>
+.include <src.opts.mk>
 
 PROG=	id
 LINKS=	${BINDIR}/id ${BINDIR}/groups
@@ -11,8 +10,6 @@ MAN=	id.1 groups.1 whoami.1
 
 .if ${MK_AUDIT} != "no"
 CFLAGS+=	-DUSE_BSM_AUDIT
-DPADD+=	${LIBBSM}
-LDADD+=	-lbsm
 .endif
 
 .include <bsd.prog.mk>
