--- a/secure/usr.bin/ssh/Makefile
+++ b/secure/usr.bin/ssh/Makefile
@@ -1,12 +1,11 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/secure/usr.bin/ssh/Makefile 312269 2017-01-16 07:10:45Z ngie $
-
-.include <bsd.own.mk>
+.include <src.opts.mk>
 
 PROG=	ssh
 LINKS=	${BINDIR}/ssh ${BINDIR}/slogin
 MAN=	ssh.1 ssh_config.5
 MLINKS=	ssh.1 slogin.1
+
+PACKAGE=	ssh
 
 SRCS=	ssh.c readconf.c clientloop.c sshtty.c \
 	sshconnect.c sshconnect2.c mux.c
@@ -17,26 +16,19 @@ SRCS+=	gss-genr.c
 CFLAGS+=-I${SSHDIR} -include ssh_namespace.h
 SRCS+=	ssh_namespace.h
 
-DPADD=	${LIBSSH} ${LIBUTIL}
-LDADD=	-lssh -lutil
-USEPRIVATELIB= ssh
+LIBADD=	ssh
 
 .if ${MK_LDNS} != "no"
 CFLAGS+=	-DHAVE_LDNS=1
-DPADD+=	${LIBLDNS}
-LDADD+=	-lldns
-USEPRIVATELIB+= ldns
 .endif
 
 .if ${MK_GSSAPI} != "no" && ${MK_KERBEROS_SUPPORT} != "no"
 CFLAGS+= -include krb5_config.h
 SRCS+=	krb5_config.h
-DPADD+=	 ${LIBGSSAPI}
-LDADD+=	 -lgssapi
+LIBADD+=	gssapi
 .endif
 
-DPADD+= ${LIBCRYPT} ${LIBCRYPTO} ${LIBZ}
-LDADD+= -lcrypt -lcrypto -lz
+LIBADD+= 	crypto
 
 .if defined(LOCALBASE)
 CFLAGS+= -DXAUTH_PATH=\"${LOCALBASE}/bin/xauth\"
