update build and pci list

--- a/share/misc/Makefile
+++ b/share/misc/Makefile
@@ -1,8 +1,7 @@
 #	From: @(#)Makefile	8.1 (Berkeley) 6/8/93
 # $FreeBSD: stable/10/share/misc/Makefile 280419 2015-03-24 06:55:08Z ngie $
-# $MidnightBSD$
 
-.include <bsd.own.mk>
+.include <src.opts.mk>
 
 .PATH:	${.CURDIR}/../../sys/dev/usb
 
@@ -11,7 +10,6 @@ FILES=	ascii birthtoken bsd-family-tree \
 	iso3166 iso639 latin1 man.template mdoc.template operator pci_vendors \
 	scsi_modes
 
-NO_OBJ=
 FILESDIR=	${BINDIR}/misc
 
 .if ${MK_USB} != "no"
