update a few usr.bin utils and cleanup makefile a bit.

--- a/usr.bin/Makefile
+++ b/usr.bin/Makefile
@@ -1,7 +1,6 @@
 #	From: @(#)Makefile	8.3 (Berkeley) 1/7/94
-# $MidnightBSD$
 
-.include <bsd.own.mk>
+.include <src.opts.mk>
 
 # XXX MISSING:		deroff diction graph learn plot
 #			spline struct xsend
@@ -32,7 +31,6 @@ SUBDIR+=alias \
 	chat \
 	chpass \
 	cksum \
-	${_clang} \
 	cmp \
 	col \
 	colldef \
@@ -49,12 +47,12 @@ SUBDIR+=alias \
 	dirname \
 	dns-sd \
 	doas \
-	${_dpv} \
 	du \
 	elf2aout \
 	elfdump \
 	enigma \
 	env \
+	etdump \
 	expand \
 	false \
 	fetch \
@@ -72,13 +70,11 @@ SUBDIR+=alias \
 	gzip \
 	head \
 	hexdump \
-	${_iconv} \
 	id \
 	ipcrm \
 	ipcs \
 	join \
 	jot \
-	${_kdump} \
 	keylogin \
 	keylogout \
 	killall \
@@ -93,6 +89,7 @@ SUBDIR+=alias \
 	lesskey \
 	limits \
 	locale \
+	localedef \
 	lock \
 	lockf \
 	logger \
@@ -105,20 +102,15 @@ SUBDIR+=alias \
 	lzmainfo \
 	m4 \
 	mDNSResponderPosix \
-	${_makewhatis} \
-	${_man} \
 	mandoc \
 	mesg \
 	minigzip \
 	ministat \
-	${_mkcsmapper} \
 	mkdep \
-	${_mkesdb} \
 	mkfifo \
 	mkimg \
 	mklocale \
 	mktemp \
-	mkulzma \
 	mkuzip \
 	msearch \
 	mt \
@@ -146,6 +138,7 @@ SUBDIR+=alias \
 	protect \
 	rctl \
 	renice \
+	resizewin \
 	rev \
 	revoke \
 	rpcinfo \
@@ -166,6 +159,7 @@ SUBDIR+=alias \
 	sqlite3 \
 	stat \
 	stdbuf \
+	strings \
 	su \
 	systat \
 	tabs \
@@ -173,7 +167,6 @@ SUBDIR+=alias \
 	tar \
 	tcopy \
 	tee \
-	${_tests} \
 	time \
 	timeout \
 	tip \
@@ -183,7 +176,6 @@ SUBDIR+=alias \
 	tr \
 	true \
 	truncate \
-	${_truss} \
 	tset \
 	tsort \
 	tty \
@@ -195,7 +187,6 @@ SUBDIR+=alias \
 	unvis \
 	uudecode \
 	uuencode \
-	vi \
 	vis \
 	vmstat \
 	w \
@@ -208,148 +199,30 @@ SUBDIR+=alias \
 	write \
 	xargs \
 	xinstall \
-	${_xlint} \
-	${_xstr} \
+	xo \
 	xz \
 	xzdec \
-	${_yacc} \
-	yes \
-	${_ypcat} \
-	${_ypmatch} \
-	${_ypwhich}
+	yes
 
 # NB: keep these sorted by MK_* knobs
 
-.if ${MK_AT} != "no"
-SUBDIR+=	at
-.endif
-
-.if ${MK_ATM} != "no"
-SUBDIR+=	atm
-.endif
-
-.if ${MK_BLUETOOTH} != "no"
-SUBDIR+=	bluetooth
-.endif
-
-.if ${MK_BSD_CPIO} != "no"
-SUBDIR+=	cpio
-.endif
-
-.if ${MK_CALENDAR} != "no"
-SUBDIR+=	calendar
-.endif
-
-.if ${MK_CLANG} != "no"
-_clang=		clang
-.endif
-
-.if ${MK_DIALOG} != "no"
-_dpv=		dpv
-.endif
-
-.if ${MK_EE} != "no"
-SUBDIR+=	ee
-.endif
-
-.if ${MK_FILE} != "no"
-SUBDIR+=	file
-.endif
-
-.if ${MK_FINGER} != "no"
-SUBDIR+=	finger
-.endif
-
-.if ${MK_FTP} != "no"
-SUBDIR+=	ftp
-.endif
+SUBDIR.${MK_AT}+=	at
+SUBDIR.${MK_ATM}+=	atm
+SUBDIR.${MK_BLUETOOTH}+=	bluetooth
+SUBDIR.${MK_BSD_CPIO}+=	cpio
+SUBDIR.${MK_CALENDAR}+=	calendar
+SUBDIR.${MK_CLANG}+=	clang
+SUBDIR.${MK_DIALOG}+=	dpv
+SUBDIR.${MK_EE}+=	ee
+SUBDIR.${MK_FILE}+=	file
+SUBDIR.${MK_FINGER}+=	finger
+SUBDIR.${MK_FTP}+=	ftp
 
 .if ${MK_GPL_DTC} != "yes"
 SUBDIR+=	dtc
 .endif
 
-.if ${MK_GROFF} != "no"
-SUBDIR+=	vgrind
-.endif
-
-.if ${MK_HESIOD} != "no"
-SUBDIR+=	hesinfo
-.endif
-
-.if ${MK_ICONV} != "no"
-_iconv=		iconv
-_mkcsmapper=	mkcsmapper
-_mkesdb=	mkesdb
-.endif
-
-.if ${MK_ISCSI} != "no"
-SUBDIR+=	iscsictl
-.endif
-
-.if ${MK_KDUMP} != "no"
-SUBDIR+=        kdump
-SUBDIR+=        truss
-.endif
-
-.if ${MK_KERBEROS_SUPPORT} != "no"
-SUBDIR+=	compile_et
-.endif
-
-.if ${MK_LDNS_UTILS} != "no"
-SUBDIR+=	drill
-SUBDIR+=	host
-.endif
-
-.if ${MK_LOCATE} != "no"
-SUBDIR+=	locate
-.endif
-
-# XXX msgs?
-.if ${MK_MAIL} != "no"
-SUBDIR+=	biff
-SUBDIR+=	from
-SUBDIR+=	mail
-SUBDIR+=	msgs
-.endif
-
-.if ${MK_MAKE} != "no"
-.if ${MK_BMAKE} != "no"
-SUBDIR+=	bmake
-.else
-SUBDIR+=	make
-.endif
-.endif
-
-.if ${MK_MAN_UTILS} != "no"
-SUBDIR+=	catman
-_makewhatis=	makewhatis
-_man=		man
-.endif
-
-.if ${MK_NETCAT} != "no"
-SUBDIR+=	nc
-.endif
-
-.if ${MK_NIS} != "no"
-SUBDIR+=	ypcat
-SUBDIR+=	ypmatch
-SUBDIR+=	ypwhich
-.endif
-
-.if ${MK_OPENSSH} != "no"
-SUBDIR+=	ssh-copy-id
-.endif
-
-.if ${MK_OPENSSL} != "no"
-SUBDIR+=	bc
-SUBDIR+=	chkey
-SUBDIR+=	dc
-SUBDIR+=	newkey
-.endif
-
-.if ${MK_QUOTAS} != "no"
-SUBDIR+=	quota
-.endif
+SUBDIR.${MK_MAKE}+=   bmake
 
 .if ${MK_RCMDS} != "no"
 SUBDIR+=	rlogin
@@ -358,67 +231,87 @@ SUBDIR+=	ruptime
 SUBDIR+=	rwho
 .endif
 
-.if ${MK_SENDMAIL} != "no"
-SUBDIR+=	vacation
+SUBDIR.${MK_GROFF}+=	vgrind
+SUBDIR.${MK_HESIOD}+=	hesinfo
+SUBDIR.${MK_ICONV}+=	iconv
+SUBDIR.${MK_ICONV}+=	mkcsmapper
+SUBDIR.${MK_ICONV}+=	mkesdb
+SUBDIR.${MK_ISCSI}+=	iscsictl
+SUBDIR.${MK_KDUMP}+=	kdump
+SUBDIR.${MK_KDUMP}+=	truss
+SUBDIR.${MK_KERBEROS_SUPPORT}+=	compile_et
+SUBDIR.${MK_LDNS_UTILS}+=	drill
+SUBDIR.${MK_LDNS_UTILS}+=	host
+SUBDIR.${MK_LOCATE}+=	locate
+# XXX msgs?
+SUBDIR.${MK_MAIL}+=	biff
+SUBDIR.${MK_MAIL}+=	from
+SUBDIR.${MK_MAIL}+=	mail
+SUBDIR.${MK_MAIL}+=	msgs
+SUBDIR.${MK_MAKE}+=	bmake
+SUBDIR.${MK_MAN_UTILS}+=	catman
+.if ${MK_MANDOCDB} == "no"	# AND
+SUBDIR.${MK_MAN_UTILS}+=	makewhatis
 .endif
-
-.if ${MK_TALK} != "no"
-SUBDIR+=	talk
+SUBDIR.${MK_MAN_UTILS}+=	man
+SUBDIR.${MK_NETCAT}+=	nc
+SUBDIR.${MK_NIS}+=	ypcat
+SUBDIR.${MK_NIS}+=	ypmatch
+SUBDIR.${MK_NIS}+=	ypwhich
+SUBDIR.${MK_OPENSSH}+=	ssh-copy-id
+SUBDIR.${MK_OPENSSL}+=	bc
+SUBDIR.${MK_OPENSSL}+=	chkey
+SUBDIR.${MK_OPENSSL}+=	dc
+SUBDIR.${MK_OPENSSL}+=	newkey
+SUBDIR.${MK_QUOTAS}+=	quota
+SUBDIR.${MK_RCMDS}+=	rlogin
+SUBDIR.${MK_RCMDS}+=	rsh
+SUBDIR.${MK_SENDMAIL}+=	vacation
+SUBDIR.${MK_TALK}+=	talk
+SUBDIR.${MK_TELNET}+=	telnet
+SUBDIR.${MK_TESTS}+=	tests
+SUBDIR.${MK_TEXTPROC}+=	checknr
+SUBDIR.${MK_TEXTPROC}+=	colcrt
+SUBDIR.${MK_TEXTPROC}+=	ul
+SUBDIR.${MK_TFTP}+=	tftp
+SUBDIR.${MK_TOOLCHAIN}+=	addr2line
+SUBDIR.${MK_TOOLCHAIN}+=	ar
+SUBDIR.${MK_TOOLCHAIN}+=	c89
+SUBDIR.${MK_TOOLCHAIN}+=	c99
+SUBDIR.${MK_TOOLCHAIN}+=	ctags
+SUBDIR.${MK_TOOLCHAIN}+=	cxxfilt
+SUBDIR.${MK_TOOLCHAIN}+=	elfcopy
+SUBDIR.${MK_TOOLCHAIN}+=	file2c
+# ARM64TODO gprof does not build
+# RISCVTODO gprof does not build
+.if ${MACHINE_ARCH} != "aarch64" && ${MACHINE_CPUARCH} != "riscv"
+SUBDIR.${MK_TOOLCHAIN}+=	gprof
 .endif
-
-.if ${MK_TELNET} != "no"
-SUBDIR+=	telnet
+SUBDIR.${MK_TOOLCHAIN}+=	indent
+SUBDIR.${MK_TOOLCHAIN}+=	lex
+SUBDIR.${MK_TOOLCHAIN}+=	mkstr
+SUBDIR.${MK_TOOLCHAIN}+=	nm
+SUBDIR.${MK_TOOLCHAIN}+=	readelf
+SUBDIR.${MK_TOOLCHAIN}+=	rpcgen
+SUBDIR.${MK_TOOLCHAIN}+=	unifdef
+SUBDIR.${MK_TOOLCHAIN}+=	size
+.if ${MK_LINT} != "no" && ${MACHINE_ARCH} != "aarch64" # ARM64TODO xlint does not build
+SUBDIR.${MK_TOOLCHAIN}+=	xlint
 .endif
-
-.if ${MK_TESTS} != "no"
-_tests=		tests
+SUBDIR.${MK_TOOLCHAIN}+=	xstr
+SUBDIR.${MK_TOOLCHAIN}+=	yacc
+SUBDIR.${MK_VI}+=	vi
+SUBDIR.${MK_VT}+=	vtfontcvt
+SUBDIR.${MK_USB}+=	usbhidaction
+SUBDIR.${MK_USB}+=	usbhidctl
+SUBDIR.${MK_UTMPX}+=	last
+.if ${MACHINE_CPUARCH} != "riscv" # RISCVTODO users does not build
+SUBDIR.${MK_UTMPX}+=	users
 .endif
-
-.if ${MK_TEXTPROC} != "no"
-SUBDIR+=	checknr
-SUBDIR+=	colcrt
-SUBDIR+=	ul
-.endif
-
-.if ${MK_TFTP} != "no"
-SUBDIR+=	tftp
-.endif
-
-.if ${MK_TOOLCHAIN} != "no"
-SUBDIR+=	ar
-SUBDIR+=	c89
-SUBDIR+=	c99
-SUBDIR+=	ctags
-SUBDIR+=	file2c
-SUBDIR+=	gprof
-SUBDIR+=	indent
-SUBDIR+=	lex
-SUBDIR+=	mkstr
-SUBDIR+=	rpcgen
-SUBDIR+=	unifdef
-SUBDIR+=	xlint
-SUBDIR+=	xstr
-SUBDIR+=	yacc
-.endif
-
-.if ${MK_VT} != "no"
-SUBDIR+=	vtfontcvt
-.endif
-
-.if ${MK_USB} != "no"
-SUBDIR+=	usbhidaction
-SUBDIR+=	usbhidctl
-.endif
-
-.if ${MK_UTMPX} != "no"
-SUBDIR+=	last
-SUBDIR+=	users
-SUBDIR+=	who
-.endif
-
-.if ${MK_SVN} == "yes" || ${MK_SVNLITE} == "yes"
-SUBDIR+=	svn
-.endif
+SUBDIR.${MK_UTMPX}+=	who
+SUBDIR.${MK_SVN}+=	svn
+SUBDIR.${MK_SVNLITE}+=	svn
+SUBDIR.${MK_OFED}+=	ofed
 
 # These are normally only handled for build-tools.
 .if make(clean*)
