update apply and m4. add ident.

--- a/usr.bin/apply/Makefile
+++ b/usr.bin/apply/Makefile
@@ -1,12 +1,11 @@
-# $MidnightBSD$
 #	@(#)Makefile	8.1 (Berkeley) 6/6/93
-# $FreeBSD: stable/10/usr.bin/apply/Makefile 264996 2014-04-27 01:15:10Z jmmv $
+# $FreeBSD: stable/11/usr.bin/apply/Makefile 275042 2014-11-25 14:29:10Z bapt $
 
-.include <bsd.own.mk>
+.include <src.opts.mk>
 
 PROG=	apply
-DPADD=	${LIBSBUF}
-LDADD=	-lsbuf
+
+LIBADD=	sbuf
 
 .if ${MK_TESTS} != "no"
 SUBDIR+= tests
