--- a/usr.bin/apply/tests/Makefile
+++ b/usr.bin/apply/tests/Makefile
@@ -1,13 +1,13 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.bin/apply/tests/Makefile 313488 2017-02-09 22:49:48Z ngie $
+# $FreeBSD: stable/11/usr.bin/apply/tests/Makefile 299094 2016-05-04 23:20:53Z ngie $
+
+PACKAGE=	tests
 
 TAP_TESTS_SH=	legacy_test
 
-FILESDIR=	${TESTSDIR}
-FILES=		regress.00.in
-FILES+=		regress.00.out
-FILES+=		regress.01.out
-FILES+=		regress.01.sh
-FILES+=		regress.sh
+${PACKAGE}FILES+=		regress.00.in
+${PACKAGE}FILES+=		regress.00.out
+${PACKAGE}FILES+=		regress.01.out
+${PACKAGE}FILES+=		regress.01.sh
+${PACKAGE}FILES+=		regress.sh
 
 .include <bsd.test.mk>
