--- a/usr.bin/basename/Makefile
+++ b/usr.bin/basename/Makefile
@@ -1,8 +1,7 @@
-# $MidnightBSD$
 #	From: @(#)Makefile	8.1 (Berkeley) 6/6/93
-# $FreeBSD: stable/10/usr.bin/basename/Makefile 276490 2015-01-01 02:04:44Z ngie $
+# $FreeBSD: stable/11/usr.bin/basename/Makefile 272779 2014-10-09 00:41:42Z ngie $
 
-.include <bsd.own.mk>
+.include <src.opts.mk>
 
 PROG=	basename
 MLINKS=	basename.1 dirname.1
