--- a/usr.bin/chpass/Makefile
+++ b/usr.bin/chpass/Makefile
@@ -1,35 +1,33 @@
-# $MidnightBSD$
 #	@(#)Makefile	8.2 (Berkeley) 4/2/94
-# $FreeBSD: stable/10/usr.bin/chpass/Makefile 207613 2010-05-04 11:34:13Z emaste $
+# $FreeBSD: stable/11/usr.bin/chpass/Makefile 319186 2017-05-30 04:27:05Z ngie $
 
-.include <bsd.own.mk>
+.include <src.opts.mk>
 
-.PATH: ${.CURDIR}/../../usr.sbin/pwd_mkdb ${.CURDIR}/../../lib/libc/gen
+.PATH: ${SRCTOP}/usr.sbin/pwd_mkdb ${SRCTOP}/lib/libc/gen
 
 PROG=	chpass
 SRCS=	chpass.c edit.c field.c pw_scan.c table.c util.c
 BINOWN=	root
 BINMODE=4555
+PRECIOUSPROG=
 .if ${MK_NIS} != "no"
 CFLAGS+= -DYP
 .endif
 #Some people need this, uncomment to activate
 #CFLAGS+=-DRESTRICT_FULLNAME_CHANGE
-CFLAGS+=-I${.CURDIR}/../../usr.sbin/pwd_mkdb -I${.CURDIR}/../../lib/libc/gen -I.
+CFLAGS+=-I${SRCTOP}/usr.sbin/pwd_mkdb -I${SRCTOP}/lib/libc/gen -I.
 
-DPADD=	${LIBCRYPT} ${LIBUTIL}
-LDADD=	-lcrypt -lutil
+LIBADD=	crypt util
 .if ${MK_NIS} != "no"
-DPADD+=	${LIBYPCLNT}
-LDADD+=	-lypclnt
+LIBADD+=	ypclnt
 .endif 
 
-LINKS=	${BINDIR}/chpass ${BINDIR}/chfn
-LINKS+=	${BINDIR}/chpass ${BINDIR}/chsh
+SYMLINKS=	chpass ${BINDIR}/chfn
+SYMLINKS+=	chpass ${BINDIR}/chsh
 .if ${MK_NIS} != "no"
-LINKS+=	${BINDIR}/chpass ${BINDIR}/ypchpass
-LINKS+=	${BINDIR}/chpass ${BINDIR}/ypchfn
-LINKS+=	${BINDIR}/chpass ${BINDIR}/ypchsh
+SYMLINKS+=	chpass ${BINDIR}/ypchfn
+SYMLINKS+=	chpass ${BINDIR}/ypchpass
+SYMLINKS+=	chpass ${BINDIR}/ypchsh
 .endif
 
 MLINKS=	chpass.1 chfn.1 chpass.1 chsh.1
@@ -43,10 +41,5 @@ beforeinstall:
 	-chflags noschg ${DESTDIR}${BINDIR}/$i
 .endif
 .endfor
-
-.if !defined(NO_FSCHG)
-afterinstall:
-	-chflags schg ${DESTDIR}${BINDIR}/chpass
-.endif
 
 .include <bsd.prog.mk>
