--- a/usr.bin/col/Makefile
+++ b/usr.bin/col/Makefile
@@ -1,8 +1,7 @@
-# $MidnightBSD$
 #	@(#)Makefile	8.1 (Berkeley) 6/6/93
-# $FreeBSD: stable/10/usr.bin/col/Makefile 289981 2015-10-26 03:15:06Z ngie $
+# $FreeBSD: stable/11/usr.bin/col/Makefile 282339 2015-05-02 12:08:28Z bapt $
 
-.include <bsd.own.mk>
+.include <src.opts.mk>
 
 PROG=	col
 
