update a few apps

--- a/usr.bin/colldef/Makefile
+++ b/usr.bin/colldef/Makefile
@@ -1,13 +1,11 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.bin/colldef/Makefile 215676 2010-11-22 14:16:22Z brucec $
+# $FreeBSD: stable/11/usr.bin/colldef/Makefile 291127 2015-11-21 10:52:32Z bapt $
 
 PROG=	colldef
 SRCS=	parse.y scan.l y.tab.h
 LFLAGS=	-8 -i
-CFLAGS+=-I. -I${.CURDIR} -I${.CURDIR}/../../lib/libc/locale
+CFLAGS+=-I. -I${.CURDIR}
 CFLAGS+=-DCOLLATE_DEBUG -DYY_NO_UNPUT -DYY_NO_INPUT
-LDADD=	-ll
-DPADD=	${LIBL}
+LIBADD=	l
 
 WARNS?=	2
 
