--- a/usr.bin/head/Makefile
+++ b/usr.bin/head/Makefile
@@ -1,6 +1,11 @@
 #	@(#)Makefile	8.1 (Berkeley) 6/6/93
-# $MidnightBSD$
+# $FreeBSD: stable/11/usr.bin/head/Makefile 326780 2017-12-11 20:33:11Z asomers $
+
+.include <src.opts.mk>
 
 PROG=	head
+
+HAS_TESTS=
+SUBDIR.${MK_TESTS}+= tests
 
 .include <bsd.prog.mk>
