--- a/usr.bin/comm/tests/Makefile
+++ b/usr.bin/comm/tests/Makefile
@@ -1,18 +1,18 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.bin/comm/tests/Makefile 313488 2017-02-09 22:49:48Z ngie $
+# $FreeBSD: stable/11/usr.bin/comm/tests/Makefile 299094 2016-05-04 23:20:53Z ngie $
+
+PACKAGE=	tests
 
 TAP_TESTS_SH=	legacy_test
 
-FILESDIR=	${TESTSDIR}
-FILES=		regress.00.out
-FILES+=		regress.00a.in
-FILES+=		regress.00b.in
-FILES+=		regress.01.out
-FILES+=		regress.01a.in
-FILES+=		regress.01b.in
-FILES+=		regress.02.out
-FILES+=		regress.02a.in
-FILES+=		regress.02b.in
-FILES+=		regress.sh
+${PACKAGE}FILES+=		regress.00.out
+${PACKAGE}FILES+=		regress.00a.in
+${PACKAGE}FILES+=		regress.00b.in
+${PACKAGE}FILES+=		regress.01.out
+${PACKAGE}FILES+=		regress.01a.in
+${PACKAGE}FILES+=		regress.01b.in
+${PACKAGE}FILES+=		regress.02.out
+${PACKAGE}FILES+=		regress.02a.in
+${PACKAGE}FILES+=		regress.02b.in
+${PACKAGE}FILES+=		regress.sh
 
 .include <bsd.test.mk>
